--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,8 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title><%= typeof title !== 'undefined' ? title : config.siteName %></title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/css/default.css">
   <link rel="stylesheet" href="/css/custom.css">
   <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
+  <script>
+  (function () {
+    if (location.protocol === 'http:') {
+      location.href = 'https://' + location.host + location.pathname + location.search + location.hash;
+    }
+  })();
+</script>
+
 </head>
 <body class="flex h-screen">
         <%- include('partials/sidebar') %>
