--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -7,6 +7,7 @@
   <li><a href="/admin/manifest/config">📦 Manifest Config</a></li>
   <li><a href="/admin/news">📰 Edit News</a></li>
   <li><a href="/admin/style">🎨 Edit Site Style</a></li>
+  <li><a href="/admin/edit_blacklist">Edit Badge Blacklist</a></li>
 </ul>
 
 <p><a href="/">← Back to Site</a></p>
