config editor, new index, lots of cleanup

--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -7,7 +7,8 @@
   <li><a href="/admin/manifest/config">📦 Manifest Config</a></li>
   <li><a href="/admin/news">📰 Edit News</a></li>
   <li><a href="/admin/style">🎨 Edit Site Style</a></li>
-  <li><a href="/admin/edit_blacklist">Edit Badge Blacklist</a></li>
+  <li><a href="/admin/edit_blacklist">⛔ Edit Badge Blacklist</a></li>
+  <li><a href="/admin/config">🛠️ Edit Config</a></li>
 </ul>
 
 <p><a href="/">← Back to Site</a></p>
